Fixes #2300 - Fixed code review recommendations